tentativa de filtro

--- a/Blog.html
+++ b/Blog.html
@@ -33,7 +33,7 @@
                 <a class="slide" href="Materias/materia1.html" id="S1">
                     <div id="texto">
                         <h2>O que é educação financeira?</h2>
-                        <p class="tema">tema</p>
+                        <p class="tema">Educação Financeira</p>
                         <p>A educação financeira abrange todos os conhecimentos sobre finanças e está relacionada
                             diretamente ao mercado econômico atual.</p>
                     </div>
@@ -41,7 +41,7 @@
                 <a class="slide" href="Materias/materia2.html" id="S2">
                     <div id="texto">
                         <h2>O que é investimentos?</h2>
-                        <p class="tema">tema</p>
+                        <p class="tema">Investimentos</p>
                         <p>É a ação de aplicar o seu dinheiro visando receber lucros no futuro. O investimento faz parte
                             do planejamento financeiro e deve buscar atender os seus objetivos.</p>
                     </div>
@@ -49,8 +49,9 @@
                 <a class="slide" href="Materias/materia3.html" id="S3">
                     <div id="texto">
                         <h2>Tipos de investimentos</h2>
-                        <p class="tema">tema</p>
-                        <p></p>
+                        <p class="tema">Investimentos</p>
+                        <p>Investimentos financeiros são aqueles onde você aplica o seu dinheiro visando um alto retorno
+                            no futuro.</p>
                     </div>
                 </a>
             </div>
@@ -65,32 +66,32 @@
                         <h3>Filtro</h3>
                         <form action="">
                             <div>
-                                <input type="checkbox" name="" id="" value="1">
-                                <label for="">Tema1</label>
+                                <input type="checkbox" name="tema1" class="economiaC" value="1">
+                                <label for="tema1">Economia</label>
                             </div>
                             <div>
-                                <input type="checkbox" name="" id="" value="2">
-                                <label for="">Tema2</label>
+                                <input type="checkbox" name="tema2" class="educFinanceiraC" value="2">
+                                <label for="tema2">Educação financeira</label>
                             </div>
                             <div>
-                                <input type="checkbox" name="" id="" value="3">
-                                <label for="">Tema3</label>
+                                <input type="checkbox" name="tema3" class="endividamentoC" value="3">
+                                <label for="tema3">Endividamento</label>
                             </div>
                             <div>
-                                <input type="checkbox" name="" id="" value="4">
-                                <label for="">Tema4</label>
+                                <input type="checkbox" name="tema4" class="investimentosC" value="4">
+                                <label for="tema4">Investimentos</label>
                             </div>
                     </div>
-                    <a href="Materias/materia4.html">
-                        <div class="imgMateria" id="M4"></div>
-                        <p class="temaM">Tema</p>
+                    <a href="Materias/materia4.html" class="bloco T4">
+                        <div class="imgMateria" id="M4" class="investimentosT"></div>
+                        <p class="temaM">Investimentos</p>
                         <h4>Poupança</h4>
                         <p>Poupar é uma forma tradicional de investir e não envolve riscos. A finalidade da poupança é
                             guardar recursos fixos para usar em um determinado fim.</p>
                     </a>
-                    <a href="Materias/materia5.html">
-                        <div class="imgMateria" id="M5"></div>
-                        <p class="temaM">Tema</p>
+                    <a href="Materias/materia5.html" class="bloco T1">
+                        <div class="imgMateria" id="M5" class="economiaT"></div>
+                        <p class="temaM">Economia</p>
                         <h4>O que é liquidez?</h4>
                         <p>A liquidez é a capacidade que um bem ou investimento tem de ser transformado em dinheiro em
                             mãos</p>
@@ -98,18 +99,18 @@
                     <div id="filtro">
                         <h3>Filtro</h3>
                         <form action="">
-                            <input type="checkbox" name="" id="" value="1">
-                            <label for="">Educação Financeira</label><br>
-                            <input type="checkbox" name="" id="" value="2">
-                            <label for="">Investimentos</label><br>
-                            <input type="checkbox" name="" id="" value="3">
-                            <label for="">Crédito</label><br>
-                            <input type="checkbox" name="" id="" value="4">
-                            <label for="">Endividamento</label><br>
+                            <input type="checkbox" name="tema1" class="economiaC" value="1">
+                            <label for="tema1">Economia</label><br>
+                            <input type="checkbox" name="tema2" class="educFinanceiraC" value="2">
+                            <label for="tema2">Educação financeira</label><br>
+                            <input type="checkbox" name="tema3" class="endividamentoC" value="3">
+                            <label for="tema3">Endividamento</label><br>
+                            <input type="checkbox" name="tema4" class="investimentosC" value="4">
+                            <label for="tema4">Investimentos</label>
                     </div>
-                    <a href="Materias/materia6.html">
-                        <div class="imgMateria" id="M6"></div>
-                        <p class="temaM">Tema</p>
+                    <a href="Materias/materia6.html" class="bloco T1">
+                        <div class="imgMateria" id="M6" class="economiaT"></div>
+                        <p class="temaM">Economia</p>
                         <h4>Bolsa de Valores</h4>
                         <p>A bolsa de valores é um ambiente digital onde ocorrem a negociação de ações, títulos e outros
                             ativos. </p>
@@ -117,9 +118,9 @@
                     <aside class="asideMobile">
                         <p>e</p>
                     </aside>
-                    <a href="Materias/materia7.html">
-                        <div class="imgMateria" id="M7"></div>
-                        <p class="temaM">Tema</p>
+                    <a href="Materias/materia7.html" class="bloco T1">
+                        <div class="imgMateria" id="M7" class="economiaT"></div>
+                        <p class="temaM">Economia</p>
                         <h4>Juros e inflação</h4>
                         <p>Juros é a porcentagem que é cobrada a partir do empréstimo do dinheiro, e a inflação são os
                             aumentos nos valores de bem que ocorrem em alguns períodos. </p>
@@ -130,9 +131,9 @@
                     <aside>
                         <p>e</p>
                     </aside>
-                    <a href="Materias/materia1.html">
-                        <div class="imgMateria" id="M8"></div>
-                        <p class="temaM">Tema</p>
+                    <a href="Materias/materia1.html" class="bloco T3">
+                        <div class="imgMateria" id="M8" class="endividamentoT"></div>
+                        <p class="temaM">Endividamento</p>
                         <h4>Crédito</h4>
                         <p>Crédito é uma forma de compra rápida oferecida por bancos centrais que não precisa
                             necessariamente do dinheiro na hora.</p>
@@ -140,9 +141,9 @@
                     <aside>
                         <p>e</p>
                     </aside>
-                    <a href="Materias/materia9.html">
-                        <div class="imgMateria" id="M9"></div>
-                        <p class="temaM">Tema</p>
+                    <a href="Materias/materia9.html" class="bloco T3">
+                        <div class="imgMateria" id="M9" class="endividamentoT"></div>
+                        <p class="temaM">Endividamento</p>
                         <h4>Endividamento</h4>
                         <p>O endividamento acontece quando você não consegue arcar com os gastos e acaba adiando o
                             pagamento. </p>
@@ -150,9 +151,9 @@
                     <aside class="asideMobile">
                         <p>e</p>
                     </aside>
-                    <a href="Materias/materia1.html">
-                        <div class="imgMateria" id="M1"></div>
-                        <p class="temaM">Tema</p>
+                    <a href="Materias/materia1.html" class="bloco T2">
+                        <div class="imgMateria" id="M1" class="educFinanceiraT"></div>
+                        <p class="temaM">Educação financeira</p>
                         <h4>O que é educação financeira?</h4>
                         <p>A educação financeira abrange todos os conhecimentos sobre finanças e está relacionada
                             diretamente ao mercado econômico atual.</p>
@@ -160,18 +161,19 @@
                     <aside>
                         <p>e</p>
                     </aside>
-                    <a href="Materias/materia2.html">
-                        <div class="imgMateria" id="M2"></div>
-                        <p class="temaM">Tema</p>
+                    <a href="Materias/materia2.html" class="bloco T4">
+                        <div class="imgMateria" id="M2" class="investimentosT"></div>
+                        <p class="temaM">Investimentos</p>
                         <h4>O que é investimentos?</h4>
                         <p>É a ação de aplicar o seu dinheiro visando receber lucros no futuro. O investimento faz parte
                             do planejamento financeiro e deve buscar atender os seus objetivos.</p>
                     </a>
-                    <a href="Materias/materia3.html">
-                        <div class="imgMateria" id="M3"></div>
-                        <p class="temaM">Tema</p>
+                    <a href="Materias/materia3.html" class="bloco T4">
+                        <div class="imgMateria" id="M3" class="investimentosT"></div>
+                        <p class="temaM">Investimentos</p>
                         <h4>Tipos de investimentos</h4>
-                        <p>p</p>
+                        <p>Investimentos financeiros são aqueles onde você aplica o seu dinheiro visando um alto retorno
+                            no futuro.</p>
                     </a>
                     <aside>
                         <p>e</p>
@@ -183,14 +185,17 @@
             </div>
         </section>
         <section id="Newsletter">
-            <div>
+            <article>
                 <h1>Assine nossa <span>Newsletter</span></h1>
                 <p>Preencha os campos para receber todos os dias dicas excluisvas de como cuidar do seu dinheiro</p>
-            </div>
-            <form action="">
-                <input type="text" name="" id="" placeholder="Nome">
-                <input type="email" name="" id="" placeholder="Email">
-            </form>
+            </article>
+            <article id="formN">
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Nome">
+                    <input type="email" name="" id="" placeholder="Email">
+                    <input type="submit" value="Enviar">
+                </form>
+            </article>
         </section>
     </main>
     <footer>
