--- a/Materias/materia7.html
+++ b/Materias/materia7.html
@@ -90,14 +90,17 @@
             </div>
         </section>
         <section id="Newsletter">
-            <div>
+            <article>
                 <h1>Assine nossa <span>Newsletter</span></h1>
                 <p>Preencha os campos para receber todos os dias dicas excluisvas de como cuidar do seu dinheiro</p>
-            </div>
-            <form action="">
-                <input type="text" name="" id="" placeholder="Nome">
-                <input type="email" name="" id="" placeholder="Email">
-            </form>
+            </article>
+            <article id="formN">
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Nome">
+                    <input type="email" name="" id="" placeholder="Email">
+                    <input type="submit" value="Enviar">
+                </form>
+            </article>
         </section>
     </main>
     <footer>
