Mudança de grid

--- a/Blog.html
+++ b/Blog.html
@@ -60,8 +60,8 @@
         </section>
         <section id="Materias">
             <h1>Matérias</h1>
-            <div id="ComAside">
-                <article>
+            <article>
+                <div id="areaMaterias">
                     <div id="filtroM">
                         <h3>Filtro</h3>
                         <form action="">
@@ -81,6 +81,7 @@
                                 <input type="checkbox" name="tema4" class="investimentosC" value="4">
                                 <label for="tema4">Investimentos</label>
                             </div>
+                        </form>
                     </div>
                     <a href="Materias/materia4.html" class="bloco T4">
                         <div class="imgMateria" id="M4" class="investimentosT"></div>
@@ -96,18 +97,6 @@
                         <p>A liquidez é a capacidade que um bem ou investimento tem de ser transformado em dinheiro em
                             mãos</p>
                     </a>
-                    <div id="filtro">
-                        <h3>Filtro</h3>
-                        <form action="">
-                            <input type="checkbox" name="tema1" class="economiaC" value="1">
-                            <label for="tema1">Economia</label><br>
-                            <input type="checkbox" name="tema2" class="educFinanceiraC" value="2">
-                            <label for="tema2">Educação financeira</label><br>
-                            <input type="checkbox" name="tema3" class="endividamentoC" value="3">
-                            <label for="tema3">Endividamento</label><br>
-                            <input type="checkbox" name="tema4" class="investimentosC" value="4">
-                            <label for="tema4">Investimentos</label>
-                    </div>
                     <a href="Materias/materia6.html" class="bloco T1">
                         <div class="imgMateria" id="M6" class="economiaT"></div>
                         <p class="temaM">Economia</p>
@@ -125,22 +114,13 @@
                         <p>Juros é a porcentagem que é cobrada a partir do empréstimo do dinheiro, e a inflação são os
                             aumentos nos valores de bem que ocorrem em alguns períodos. </p>
                     </a>
-                    <aside>
-                        <p>e</p>
-                    </aside>
-                    <aside>
-                        <p>e</p>
-                    </aside>
-                    <a href="Materias/materia1.html" class="bloco T3">
+                    <a href="Materias/materia8.html" class="bloco T3">
                         <div class="imgMateria" id="M8" class="endividamentoT"></div>
                         <p class="temaM">Endividamento</p>
                         <h4>Crédito</h4>
                         <p>Crédito é uma forma de compra rápida oferecida por bancos centrais que não precisa
                             necessariamente do dinheiro na hora.</p>
                     </a>
-                    <aside>
-                        <p>e</p>
-                    </aside>
                     <a href="Materias/materia9.html" class="bloco T3">
                         <div class="imgMateria" id="M9" class="endividamentoT"></div>
                         <p class="temaM">Endividamento</p>
@@ -158,9 +138,6 @@
                         <p>A educação financeira abrange todos os conhecimentos sobre finanças e está relacionada
                             diretamente ao mercado econômico atual.</p>
                     </a>
-                    <aside>
-                        <p>e</p>
-                    </aside>
                     <a href="Materias/materia2.html" class="bloco T4">
                         <div class="imgMateria" id="M2" class="investimentosT"></div>
                         <p class="temaM">Investimentos</p>
@@ -175,14 +152,46 @@
                         <p>Investimentos financeiros são aqueles onde você aplica o seu dinheiro visando um alto retorno
                             no futuro.</p>
                     </a>
-                    <aside>
-                        <p>e</p>
-                    </aside>
                     <aside class="asideMobile">
                         <p>e</p>
                     </aside>
-                </article>
-            </div>
+                </div>
+                <div id="areaAnuncios">
+                    <div id="filtro">
+                        <h3>Filtro</h3>
+                        <form action="">
+                            <div>
+                                <input type="checkbox" name="tema1" class="economiaC" value="1">
+                                <label for="tema1">Economia</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="tema2" class="educFinanceiraC" value="2">
+                                <label for="tema2">Educação financeira</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="tema3" class="endividamentoC" value="3">
+                                <label for="tema3">Endividamento</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="tema4" class="investimentosC" value="4">
+                                <label for="tema4">Investimentos</label>
+                            </div>
+                        </form>
+                    </div>
+                    <aside>
+                        <p>e</p>
+                    </aside>
+                    <aside>
+                        <p>e</p>
+                    </aside>
+                    <aside>
+                        <p>e</p>
+                    </aside>
+                    <aside>
+                        <p>e</p>
+                    </aside>
+                </div>
+            </article>
         </section>
         <section id="Newsletter">
             <article>
