--- a/Blog.html
+++ b/Blog.html
@@ -66,19 +66,19 @@
                         <h3>Filtro</h3>
                         <form action="">
                             <div>
-                                <input type="checkbox" name="tema1" class="economiaC" value="1">
+                                <input type="checkbox" name="tema1" class="economiaC" value="Economia">
                                 <label for="tema1">Economia</label>
                             </div>
                             <div>
-                                <input type="checkbox" name="tema2" class="educFinanceiraC" value="2">
+                                <input type="checkbox" name="tema2" class="educFinanceiraC" value="Educação financeira">
                                 <label for="tema2">Educação financeira</label>
                             </div>
                             <div>
-                                <input type="checkbox" name="tema3" class="endividamentoC" value="3">
+                                <input type="checkbox" name="tema3" class="endividamentoC" value="Endividamento">
                                 <label for="tema3">Endividamento</label>
                             </div>
                             <div>
-                                <input type="checkbox" name="tema4" class="investimentosC" value="4">
+                                <input type="checkbox" name="tema4" class="investimentosC" value="Investimentos">
                                 <label for="tema4">Investimentos</label>
                             </div>
                         </form>
@@ -161,19 +161,19 @@
                         <h3>Filtro</h3>
                         <form action="">
                             <div>
-                                <input type="checkbox" name="tema1" class="economiaC" value="1">
+                                <input type="checkbox" name="tema1" class="economiaC" value="Economia">
                                 <label for="tema1">Economia</label>
                             </div>
                             <div>
-                                <input type="checkbox" name="tema2" class="educFinanceiraC" value="2">
+                                <input type="checkbox" name="tema2" class="educFinanceiraC" value="Educação financeira">
                                 <label for="tema2">Educação financeira</label>
                             </div>
                             <div>
-                                <input type="checkbox" name="tema3" class="endividamentoC" value="3">
+                                <input type="checkbox" name="tema3" class="endividamentoC" value="Endividamento">
                                 <label for="tema3">Endividamento</label>
                             </div>
                             <div>
-                                <input type="checkbox" name="tema4" class="investimentosC" value="4">
+                                <input type="checkbox" name="tema4" class="investimentosC" value="Investimentos">
                                 <label for="tema4">Investimentos</label>
                             </div>
                         </form>
